--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,57 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Home Assistant
+.storage
+.cloud
+.google.token
+.HA_VERSION
+home-assistant.log
+home-assistant_v2.db
+deps/
+tts/
+.uuid
+
+# Testing
+.coverage
+coverage.xml
+htmlcov/
+.pytest_cache/
+.mypy_cache/
+
+# Custom
+*.log
+*.db
+*.db-shm
+*.db-wal
