--- a/www/hwam-stove-card/package.json
+++ b/www/hwam-stove-card/package.json
@@ -1,1 +1,28 @@
-
+{
+  "name": "hwam-stove-card",
+  "version": "1.0.0",
+  "description": "Custom cards for HWAM Smart Control",
+  "main": "dist/hwam-card.js",
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "watch": "webpack --watch --config webpack.config.js",
+    "lint": "eslint src/**/*.js",
+    "test": "jest"
+  },
+  "author": "Digital-Munebox",
+  "license": "MIT",
+  "dependencies": {
+    "lit-element": "^2.5.1",
+    "chart.js": "^4.4.1",
+    "custom-card-helpers": "^1.9.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.56.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
+  }
+}
